Prod V2/main/default/objects/Opportunity_Package__c/Opportunity_Package__c.object-meta.xml
<CustomObject>
    <description>Junction between Opportunites and packages - used in order creation</description>
    <label>Opportunity Package</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Opportunity Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>