Prod V2/main/default/objects/Opportunity_Package__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Packages</relationshipLabel>
    <relationshipName>Opportunity_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>