Prod V2/main/default/objects/Opportunity_Package__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Opportunity Packages</relationshipLabel>
    <relationshipName>Opportunity_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>