Prod V2/main/default/objects/Opportunity_Package__c/fields/Yearly__c.field-meta.xml
<CustomField>
    <fullName>Yearly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yearly</label>
    <type>Checkbox</type>
</CustomField>