Prod V2/main/default/objects/Opportunity_Package__c/fields/YearOLD__c.field-meta.xml
<CustomField>
    <fullName>YearOLD__c</fullName>
    <description>is this a yearly package?</description>
    <formula>Package__r.Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YearOLD</label>
    <type>Checkbox</type>
</CustomField>